syntax = "proto3";

package BLA;

service BLAService {
  rpc Query (BLAQueryRequest) returns (BLAQueryRespnse) {}
}

message Empty {}


message BLAQueryRequest {
  RequestHeader Header = 1;
  RequestBCDATA BCData=2;
  RequestBody Body = 3;
}

message RequestHeader {
  string tranType = 1;
  string tranCode = 2;
  string userID = 3;
  string org = 4;
  string timeStamp=5;
  string UUID = 6;
  repeated string ResponseMQ = 10;
  string RRN = 11;
}

message RequestBCDATA {
		
  string configType = 1;
  

}

message RequestBody {

  repeated string peerListInvoke = 1;
  string channelName = 2;
  string SmartContractName=7;
  string fcnName = 3;
  repeated string arguments = 4;
  string transactionID=9;

}

message BLAQueryRespnse {
  ResponseHeader Header = 1;
  ResponseBCDATA BCData = 2;
  ResponseBody Body = 3;
}

message ResponseHeader {
  string tranType = 1;
  string tranCode = 2;
  string userID = 3;
  string org = 4;
  string timeStamp=5;
  string UUID = 6;
  repeated string ResponseMQ = 10;
  string RRN = 11;
}

message ResponseBCDATA {
		
  string peerListQuery = 1;
  string channelName = 2;
  string smartContractName=3;
  repeated string peerListInvoke = 4;



}

message ResponseBody {
  bool success = 1;
  string result = 2;
}



message BLAMessage {
  bool success = 1;
  string result = 2;
}

message BLAMessageList {
  repeated BLAMessage msg = 1;
}

